--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img class="logo" src="img/logo-dark.png" alt="logo brand" />
 
       <h1 class="welcome">Welcome to our Restaurant</h1>
-      <div class="welcome-links">
+      <div class="header-links">
         <a href="#menu-section">Menu</a>
         <a href="#1">Lunch</a>
         <a href="#1">About Us</a>
