--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Larsson</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/menu-toggle-btn.css" />
     <script src="js/script.js" defer></script>
     <script src="js/menu.js" defer></script>
 
@@ -26,10 +25,10 @@
             src="img/logo-dark.png"
             alt="Restaurant Larsson logo"
         /></a>
-        <nav class="navigation" role="navigation">
+        <nav class="navigation">
           <ul>
             <li>
-              <a href="#" role="button" onclick="showMenu()" class="menu-toggle"
+              <a role="button" onclick="showMenu()" class="menu-toggle"
                 >Our Food</a
               >
             </li>
