js active button

--- a/index.html
+++ b/index.html
@@ -28,15 +28,33 @@
         <nav class="navigation">
           <ul>
             <li>
-              <a role="button" onclick="showMenu()" class="menu-toggle"
+              <a
+                a
+                href="#"
+                role="button"
+                onclick="showMenu();"
+                class="menu-toggle"
+                id="menu-link"
                 >Our Food</a
               >
             </li>
             <li>
-              <a href="#" role="button" class="menu-toggle">Our History</a>
+              <a
+                href="#"
+                role="button"
+                onclick="activateNavItem('history');"
+                class="menu-toggle"
+                >Our History</a
+              >
             </li>
             <li>
-              <a href="#" role="button" class="menu-toggle">Contact Us</a>
+              <a
+                href="#"
+                role="button"
+                onclick="activateNavItem('contact');"
+                class="menu-toggle"
+                >Contact Us</a
+              >
             </li>
           </ul>
           <div class="dark-mode">
