click outside + active buttons

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
         <nav class="navigation">
           <ul>
             <li>
-              <a
-                a
-                href="#"
-                role="button"
-                onclick="showMenu();"
-                class="menu-toggle"
-                id="menu-link"
+              <a a href="#" role="button" class="menu-toggle" id="menu-link"
                 >Our Food</a
               >
             </li>
@@ -44,6 +38,7 @@
                 role="button"
                 onclick="activateNavItem('history');"
                 class="menu-toggle"
+                id="history-link"
                 >Our History</a
               >
             </li>
@@ -53,6 +48,7 @@
                 role="button"
                 onclick="activateNavItem('contact');"
                 class="menu-toggle"
+                id="contact-link"
                 >Contact Us</a
               >
             </li>
