major fix of files

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <title>Restaurant Larsson</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
+
+    <!--     <script src="js/script.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/darkmode.js" defer></script>
     <script src="js/history.js" defer></script>
-    <script src="js/contact.js" defer></script>
+    <script src="js/contact.js" defer></script> -->
 
     <script src="https://kit.fontawesome.com/70f7a209bd.js"></script>
   </head>
@@ -41,19 +43,13 @@
           <!-- </div> -->
           <ul>
             <li>
-              <button class="nav-btn" id="menu-link" onclick="showMenu()">
-                Our Food
-              </button>
+              <button class="nav-btn" id="menu-link">Our Food</button>
             </li>
             <li>
-              <button class="nav-btn" id="history-link" onclick="ourHistory()">
-                Our History
-              </button>
+              <button class="nav-btn" id="history-link">Our History</button>
             </li>
             <li>
-              <button class="nav-btn" id="contact-link" onclick="showContact()">
-                Contact Us
-              </button>
+              <button class="nav-btn" id="contact-link">Contact Us</button>
             </li>
           </ul>
 
