--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="index.html">
             <img
               class="logo"
-              src="img/logo-dark.png"
+              src="img/logo-light.png"
               alt="Restaurant Larsson logo"
             />
           </a>
@@ -43,9 +43,9 @@
       <!-- Footer -->
       <footer>
         <div class="menu-btn">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="span"></span>
+          <span class="span"></span>
+          <span class="span"></span>
         </div>
         <p>&copy; 2025 TomBenRex</p>
       </footer>
