--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
               <button class="nav-btn" id="menu-link">Our Food</button>
             </li>
             <li>
-              <button class="nav-btn" id="history-link">Our History</button>
+              <button class="nav-btn" id="history-link">
+                About Restaurant
+              </button>
             </li>
             <li>
               <button class="nav-btn" id="contact-link">Contact Us</button>
