Working. Fixing footer and effects when clicking on url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Restaurant Larsson</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js" defer></script>
   </head>
   <!-- Body -->
   <body>
