fixing darkmode issue

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <!-- Header -->
       <header class="header">
         <nav class="navigation">
-          <a href="index.html">
-            <img
-              class="logo"
-              src="img/logo-light.png"
-              alt="Restaurant Larsson logo"
-            />
-          </a>
+          <img
+            class="logo"
+            src="img/logo-light.png"
+            alt="Restaurant Larsson logo"
+            id="logo"
+          />
+
           <ul>
             <li>
               <button class="nav-btn" id="menu-link">Our Food</button>
